# arm_mazzolini

./: .gitignore  CMakeLists.txt  README.md  package.xml
arm_mazzolini/: __init__.py  simulation_process_spawner.py
config/: arm_controller.yaml  bunker_fake.yaml  camera_info_left.yaml  camera_info_right.yaml  simulated_D435_parameters.yaml  weeder_controller.yaml  weeder_controller_heavy.yaml  weeder_controller_light.yaml
data/: Proprietà fisiche RR planare.txt  RR_planar.txt
include/arm_mazzolini/: arm_kinematic.hpp  error_type.hpp  gazebo_target_visualizer.hpp  kinematic_node.hpp  node.hpp  rviz_target_visualizer.hpp  sphere_detector.hpp  target_spawner.hpp  target_visualizer_gazebo.hpp  target_visualizer_rviz.hpp  weeder_controller.hpp
launch/: bunker_visual.launch.py  weeder.launch.py
meshes/stl/: Braccio2.stl  Braccio3.stl  D435.stl
rviz/: first_config.rviz  second_config.rviz
src/: arm_kinematic.cpp  camera_info_publisher.cpp  gazebo_target_visualizer.cpp  kinematic_node.cpp  node.cpp  rviz_target_visualizer.cpp  sphere_detector.cpp  target_spawner.cpp  target_visualizer_gazebo.cpp  target_visualizer_rviz.cpp  weeder_controller.cpp
urdf/: agriculture_geometry.sdf  agriculture_geometry.urdf  agriculture_geometry.urdf.xacro  arm.xacro  base.xacro  base_station.urdf.xacro  bunker_control.xacro  bunker_fake.xacro  camera.xacro  charge_dock.urdf.xacro  stereo_camera.sdf  stereo_camera.sdf.xacro  weeder_robot.xacro
world/: custom_world.sdf
worlds/: agricultural_world.sdf  agricultural_world_with_barn.sdf
